feat(opcuaServer): 优化opcuaServer更新数据效率

--- a/src/debugs/ThingsGateway.Debug.Photino/wwwroot/index.html
+++ b/src/debugs/ThingsGateway.Debug.Photino/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -11,7 +11,6 @@
     <link href="_content/BootstrapBlazor/css/bootstrap.blazor.bundle.min.css" rel="stylesheet">
     <link href="_content/BootstrapBlazor/css/motronic.min.css" rel="stylesheet">
     <link href="ThingsGateway.Debug.Photino.styles.css" rel="stylesheet" />
-    <link href="/_content/ThingsGateway.Razor/css/site.css" rel="stylesheet" />
     <link href="/_content/ThingsGateway.Razor/css/site.css" rel="stylesheet" />
     <script src="/_content/ThingsGateway.Razor/js/theme.js" type="module"></script><!-- 初始主题 -->
     <script src="/_content/ThingsGateway.Razor/js/culture.js"></script>
