更新種子數據

--- a/src/ThingsGateway.Winform/wwwroot/index.html
+++ b/src/ThingsGateway.Winform/wwwroot/index.html
@@ -14,12 +14,17 @@
     <link href="/_content/ThingsGateway.Razor/css/site.css" rel="stylesheet" />
     <script src="/_content/ThingsGateway.Razor/js/theme.js" type="module"></script><!-- 初始主题 -->
     <script src="/_content/ThingsGateway.Razor/js/culture.js"></script>
+    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/blazor-diagram.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/diagram.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.Gateway.Razor/styles.css" />
+
 </head>
 
 <body>
     <div id="app"></div>
 
     <script src="_content/BootstrapBlazor/js/bootstrap.blazor.bundle.min.js"></script>
+    <script src="/_content/ThingsGateway.Blazor.Diagrams/diagram.js"></script>
     <script src="_framework/blazor.webview.js" autostart="true"></script>
 </body>
 </html>
