修改非数采插件的引用方式

--- a/src/ThingsGateway.Winform/wwwroot/index.html
+++ b/src/ThingsGateway.Winform/wwwroot/index.html
@@ -14,9 +14,8 @@
     <link href="/_content/ThingsGateway.Razor/css/site.css" rel="stylesheet" />
     <script src="/_content/ThingsGateway.Razor/js/theme.js" type="module"></script><!-- 初始主题 -->
     <script src="/_content/ThingsGateway.Razor/js/culture.js"></script>
-    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/blazor-diagram.css" />
     <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/diagram.css" />
-    <link rel="stylesheet" href="/_content/ThingsGateway.Gateway.Razor/styles.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.RulesEngine/style.css" />
 
 </head>
 
