--- a/src/ThingsGateway.Photino/wwwroot/index.html
+++ b/src/ThingsGateway.Photino/wwwroot/index.html
@@ -15,9 +15,8 @@
     <script src="/_content/ThingsGateway.Razor/js/theme.js" type="module"></script><!-- 初始主题 -->
     <script src="/_content/ThingsGateway.Razor/js/culture.js"></script>
 
-    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/blazor-diagram.css" />
     <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/diagram.css" />
-    <link rel="stylesheet" href="/_content/ThingsGateway.Gateway.Razor/styles.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.RulesEngine/style.css" />
 
 </head>
 
