fix: 变量实时值偶发错误
feat: 优化内存占用

--- a/src/ThingsGateway.Photino/wwwroot/index.html
+++ b/src/ThingsGateway.Photino/wwwroot/index.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>ThingsGateway.Debug</title>
+    <title>ThingsGateway.Hybrid</title>
     <base href="/" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -14,7 +15,6 @@
     <link href="/_content/ThingsGateway.Razor/css/site.css" rel="stylesheet" />
     <script src="/_content/ThingsGateway.Razor/js/theme.js" type="module"></script><!-- 初始主题 -->
     <script src="/_content/ThingsGateway.Razor/js/culture.js"></script>
-
 
 </head>
 
